# vael-desktop

./: .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: gen-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gsi.rs  main.rs
src-tauri/src/vision/: capture.rs  color_refs.rs  heroes_sb_phash.txt  hwnd.rs  level.rs  locate.rs  mod.rs  ncc.rs  pipeline.rs  recognize.rs  topbar.rs  topbar_refs.rs  vlog.rs  zones.rs
tools/refbuild/: Cargo.toml
tools/refbuild/src/: main.rs
ui/: app.js  index.html  logo.js  overlay.html  overlay.js  styles.css
